[package]
name = "cargo-uefi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.25", features = ["derive"] }
toml_edit = { version = "0.15.0", features = ["easy"] }
serde = { version = "1.0", features = ["derive"] }
